# sauce

./: ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  README.md  bundler.toml
.github/workflows/: build.yml
installer/: sauce.iss
src/: lib.rs
src/dsp/: formant.rs  mod.rs  note_snap.rs  psola.rs  shifter.rs  yin.rs
src/editor/: mod.rs  widgets.rs
tests/: formant_test.rs  note_snap_test.rs  psola_test.rs  shifter_test.rs  yin_test.rs
